--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -5,7 +5,7 @@
 name = Prusa Research
 # Configuration version of this file. Config file will only be installed, if the config_version differs.
 # This means, the server may force the PrusaSlicer configuration to be downgraded.
-config_version = 1.3.0-alpha1
+config_version = 1.3.0-alpha2
 # Where to get the updates from?
 config_update_url = https://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/PrusaResearch/
 changelog_url = https://files.prusa3d.com/?latest=slicer-profiles&lng=%1%
@@ -121,6 +121,15 @@ family = SL1
 bed_model = sl1_bed.stl
 bed_texture = sl1.svg
 default_materials = Prusa Orange Tough @0.05
+
+[printer_model:SL1S]
+name = Original Prusa SL1S SPEED
+variants = default
+technology = SLA
+family = SL1
+bed_model = sl1s_bed.stl
+bed_texture = sl1s.svg
+default_materials = Prusa Orange Tough @0.05 SL1S
 
 # All presets starting with asterisk, for example *common*, are intermediate and they will
 # not make it into the user interface.
@@ -4000,7 +4009,7 @@ slowdown_below_layer_time = 20
 compatible_printers_condition = nozzle_diameter[0]==0.8 and printer_model=="MINI"
 
 [sla_print:*common*]
-compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_SL1.*/
+compatible_printers_condition = printer_model=="SL1"
 layer_height = 0.05
 output_filename_format = [input_filename_base].sl1
 pad_edge_radius = 0.5
@@ -4027,6 +4036,16 @@ support_pillar_widening_factor = 0
 supports_enable = 1
 support_small_pillar_diameter_percent = 60%
 
+[sla_print:*SL1S*]
+inherits = *common*
+support_head_front_diameter = 0.5
+support_head_penetration = 0.5
+support_pillar_diameter = 1
+output_filename_format = [input_filename_base].sl1s
+compatible_printers_condition = printer_model=="SL1S"
+
+# SL1 #
+
 [sla_print:0.025 UltraDetail]
 inherits = *common*
 layer_height = 0.025
@@ -4047,10 +4066,25 @@ support_head_front_diameter = 0.5
 support_head_penetration = 0.5
 support_pillar_diameter = 1.3
 
+# SL1S #
+
+[sla_print:0.025 UltraDetail @SL1S]
+inherits = *SL1S*
+layer_height = 0.025
+support_head_width = 3
+
+[sla_print:0.05 Normal @SL1S]
+inherits = *SL1S*
+layer_height = 0.05
+
+[sla_print:0.1 Fast @SL1S]
+inherits = *SL1S*
+layer_height = 0.1
+
 ########### Materials
 
-[sla_material:*common 0.05*]
-compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_SL1.*/
+[sla_material:*common*]
+compatible_printers_condition = printer_model=="SL1"
 compatible_prints_condition = layer_height == 0.05
 exposure_time = 12
 initial_exposure_time = 45
@@ -4059,24 +4093,49 @@ material_correction = 1,1,1
 material_notes = 
 
 [sla_material:*common 0.025*]
-inherits = *common 0.05*
+inherits = *common*
 compatible_prints_condition = layer_height == 0.025
 exposure_time = 10
 initial_exposure_time = 35
 initial_layer_height = 0.025
 
 [sla_material:*common 0.035*]
-inherits = *common 0.05*
+inherits = *common*
 compatible_prints_condition = layer_height == 0.035
 exposure_time = 13
 initial_exposure_time = 40
 initial_layer_height = 0.035
 
+[sla_material:*common 0.05*]
+inherits = *common*
+
 [sla_material:*common 0.1*]
-inherits = *common 0.05*
+inherits = *common*
 compatible_prints_condition = layer_height == 0.1
 exposure_time = 20
 initial_exposure_time = 45
+initial_layer_height = 0.1
+
+[sla_material:*0.025_sl1s*]
+inherits = *common*
+compatible_prints_condition = layer_height == 0.025
+compatible_printers_condition = printer_model=="SL1S"
+exposure_time = 1.3
+initial_exposure_time = 25
+initial_layer_height = 0.025
+
+[sla_material:*0.05_sl1s*]
+inherits = *common*
+compatible_printers_condition = printer_model=="SL1S"
+exposure_time = 1.7
+initial_exposure_time = 25
+
+[sla_material:*0.1_sl1s*]
+inherits = *common*
+compatible_prints_condition = layer_height == 0.1
+compatible_printers_condition = printer_model=="SL1S"
+exposure_time = 2.6
+initial_exposure_time = 25
 initial_layer_height = 0.1
 
 ########### Materials 0.025
@@ -4095,14 +4154,14 @@ initial_exposure_time = 30
 material_type = Tough
 material_vendor = 3DM
 
-[sla_material:3DM-TOUGH Clear 0.025]
+[sla_material:3DM-TOUGH Clear @0.025]
 inherits = *common 0.025*
 exposure_time = 9
 initial_exposure_time = 30
 material_type = Tough
 material_vendor = 3DM
 
-[sla_material:3DM-HR Red Wine 0.025]
+[sla_material:3DM-HR Red Wine @0.025]
 inherits = *common 0.025*
 exposure_time = 14
 initial_exposure_time = 35
@@ -4735,7 +4794,7 @@ initial_exposure_time = 30
 material_type = Tough
 material_vendor = 3DM
 
-[sla_material:3DM-TOUGH Clear 0.05]
+[sla_material:3DM-TOUGH Clear @0.05]
 inherits = *common 0.05*
 exposure_time = 15
 initial_exposure_time = 30
@@ -5278,6 +5337,371 @@ exposure_time = 8
 initial_exposure_time = 35
 material_type = Tough
 material_vendor = Made for Prusa
+
+## SL1S materials ##
+
+## 0.025 SL1S
+
+[sla_material:Prusa Orange Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White ABS like @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Azure Blue Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Black Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Cyan Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Magenta Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Maroon Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Pink Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Blue Flexible @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Flexible
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey High Tenacity @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Polymers Orange @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Prusa Polymers
+
+[sla_material:3DM-ABS Orange @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:3DM-TOUGH Clear @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:Peopoly Clear Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly White Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+## 0.05 SL1S
+
+[sla_material:Prusa Orange Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White ABS like @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Azure Blue Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Black Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2.4
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Cyan Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Magenta Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Maroon Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2.4
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Pink Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Blue Flexible @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Flexible
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2.4
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey High Tenacity @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Polymers Orange @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Prusa Polymers
+
+[sla_material:3DM-ABS Orange @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:3DM-TOUGH Clear @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:Peopoly Clear Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly White Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+## 0.1 SL1S
+
+[sla_material:Prusa Orange Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White ABS like @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Azure Blue Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Black Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 3
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Cyan Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Magenta Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Maroon Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 3
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa White Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Pink Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Blue Flexible @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Flexible
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 3
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Grey High Tenacity @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Made for Prusa
+
+[sla_material:Prusa Polymers Orange @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Prusa Polymers
+
+[sla_material:3DM-ABS Orange @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 3
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:3DM-TOUGH Clear @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 3
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = 3DM
+
+[sla_material:Peopoly Clear Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly White Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
 
 [printer:*common*]
 printer_technology = FFF
@@ -5995,6 +6419,35 @@ min_initial_exposure_time = 1
 max_initial_exposure_time = 300
 printer_correction = 1,1,1
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_PRUSA3D\nPRINTER_MODEL_SL1\n
+
+[printer:Original Prusa SL1S SPEED]
+printer_technology = SLA
+printer_model = SL1S
+printer_variant = default
+default_sla_material_profile = Prusa Orange Tough @0.05 SL1S
+default_sla_print_profile = 0.05 Normal @SL1S
+thumbnails = 400x400,800x480
+bed_shape = 0.5x0.5,127.5x0.5,127.5x80.5,0.5x80.5
+display_height = 81
+display_mirror_x = 1
+display_mirror_y = 0
+display_orientation = portrait
+display_pixels_x = 2560
+display_pixels_y = 1620
+display_width = 128
+elefant_foot_compensation = 0.2
+elefant_foot_min_width = 0.2
+fast_tilt_time = 4
+slow_tilt_time = 5.7
+gamma_correction = 1
+max_print_height = 150
+min_exposure_time = 1
+max_exposure_time = 120
+min_initial_exposure_time = 1
+max_initial_exposure_time = 300
+printer_correction = 1,1,1
+relative_correction = 1,1
+area_fill = 50
 
 # The obsolete presets will be removed when upgrading from the legacy configuration structure (up to Slic3r 1.39.2) to 1.40.0 and newer.
 [obsolete_presets]
