--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -5,7 +5,7 @@
 name = Prusa Research
 # Configuration version of this file. Config file will only be installed, if the config_version differs.
 # This means, the server may force the PrusaSlicer configuration to be downgraded.
-config_version = 1.4.0-alpha0
+config_version = 1.4.0-alpha1
 # Where to get the updates from?
 config_update_url = https://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/PrusaResearch/
 changelog_url = https://files.prusa3d.com/?latest=slicer-profiles&lng=%1%
@@ -5426,13 +5426,6 @@ initial_exposure_time = 25
 material_type = Tough
 material_vendor = Made for Prusa
 
-[sla_material:Prusa Polymers Orange @0.025 SL1S]
-inherits = *0.025_sl1s*
-exposure_time = 1.8
-initial_exposure_time = 25
-material_type = Tough
-material_vendor = Prusa Polymers
-
 [sla_material:3DM-ABS Orange @0.025 SL1S]
 inherits = *0.025_sl1s*
 exposure_time = 1.8
@@ -5455,6 +5448,20 @@ material_type = Tough
 material_vendor = Peopoly
 
 [sla_material:Peopoly White Tough @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Deft White @0.025 SL1S]
+inherits = *0.025_sl1s*
+exposure_time = 1.8
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Neo Clear @0.025 SL1S]
 inherits = *0.025_sl1s*
 exposure_time = 1.8
 initial_exposure_time = 25
@@ -5547,13 +5554,6 @@ initial_exposure_time = 25
 material_type = Tough
 material_vendor = Made for Prusa
 
-[sla_material:Prusa Polymers Orange @0.05 SL1S]
-inherits = *0.05_sl1s*
-exposure_time = 2
-initial_exposure_time = 25
-material_type = Tough
-material_vendor = Prusa Polymers
-
 [sla_material:3DM-ABS Orange @0.05 SL1S]
 inherits = *0.05_sl1s*
 exposure_time = 2.6
@@ -5576,6 +5576,20 @@ material_type = Tough
 material_vendor = Peopoly
 
 [sla_material:Peopoly White Tough @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Deft White @0.05 SL1S]
+inherits = *0.05_sl1s*
+exposure_time = 2
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Neo Clear @0.05 SL1S]
 inherits = *0.05_sl1s*
 exposure_time = 2
 initial_exposure_time = 25
@@ -5668,13 +5682,6 @@ initial_exposure_time = 25
 material_type = Tough
 material_vendor = Made for Prusa
 
-[sla_material:Prusa Polymers Orange @0.1 SL1S]
-inherits = *0.1_sl1s*
-exposure_time = 2.6
-initial_exposure_time = 25
-material_type = Tough
-material_vendor = Prusa Polymers
-
 [sla_material:3DM-ABS Orange @0.1 SL1S]
 inherits = *0.1_sl1s*
 exposure_time = 3
@@ -5697,6 +5704,20 @@ material_type = Tough
 material_vendor = Peopoly
 
 [sla_material:Peopoly White Tough @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Deft White @0.1 SL1S]
+inherits = *0.1_sl1s*
+exposure_time = 2.6
+initial_exposure_time = 25
+material_type = Tough
+material_vendor = Peopoly
+
+[sla_material:Peopoly Neo Clear @0.1 SL1S]
 inherits = *0.1_sl1s*
 exposure_time = 2.6
 initial_exposure_time = 25
