--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -131,6 +131,15 @@ bed_model = cr10s4_bed.stl
 bed_texture = cr10s4.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+[printer_model:CR10SMART]
+name = Creality CR-10 SMART
+variants = 0.4
+technology = FFF
+family = CR
+bed_model = cr10v2_bed.stl
+bed_texture = cr10spro.svg
+default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 [printer_model:CR10MINI]
 name = Creality CR-10 Mini
 variants = 0.4
@@ -997,6 +1006,14 @@ bed_shape = 5x5,395x5,395x395,5x395
 max_print_height = 400
 printer_model = CR6MAX
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6MAX\nPRINTER_HAS_BOWDEN
+
+[printer:Creality CR-10 SMART]
+inherits = *common*; *straingauge*
+retract_length = 6
+bed_shape = 5x5,295x5,295x295,5x295
+max_print_height = 400
+printer_model = CR10SMART
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR10SMART\nPRINTER_HAS_BOWDEN
 
 [printer:Creality CR-10 Mini]
 inherits = *common*
