creality.ini: make print profiles inclusive of Sermoon printers

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -459,36 +459,36 @@ top_solid_layers = 4
 
 [print:0.08mm SUPERDETAIL @CREALITY]
 inherits = *0.08mm*
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.10mm HIGHDETAIL @CREALITY]
 inherits = *0.10mm*
 renamed_from = "0.10mm HIGHDETAIL @ENDER3"
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.12mm DETAIL @CREALITY]
 inherits = *0.12mm*
 renamed_from = "0.12mm DETAIL @ENDER3"
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.16mm OPTIMAL @CREALITY]
 inherits = *0.16mm*
 renamed_from = "0.15mm OPTIMAL @ENDER3"; "0.15mm OPTIMAL @CREALITY"
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.20mm NORMAL @CREALITY]
 inherits = *0.20mm*
 renamed_from = "0.20mm NORMAL @ENDER3"
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.24mm DRAFT @CREALITY]
 inherits = *0.24mm*
 renamed_from = "0.24mm DRAFT @ENDER3"
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 [print:0.28mm SUPERDRAFT @CREALITY]
 inherits = *0.28mm*
-compatible_printers_condition = printer_model=~/(ENDER|CR).*/ and nozzle_diameter[0]==0.4
+compatible_printers_condition = printer_model=~/(ENDER|CR|SERMOON).*/ and nozzle_diameter[0]==0.4
 
 # When submitting new filaments please print the following temperature tower at 0.1mm layer height:
 #   https://www.thingiverse.com/thing:2615842
