Renamed the "marlinfirmware" firmware flavor to "marlin2".

--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -6325,7 +6325,7 @@ thumbnails = 16x16,220x124
 bed_shape = 0x0,180x0,180x180,0x180
 default_filament_profile = "Prusament PLA"
 default_print_profile = 0.15mm QUALITY @MINI
-gcode_flavor = marlinfirmware
+gcode_flavor = marlin2
 machine_max_acceleration_e = 5000
 machine_max_acceleration_extruding = 1250
 machine_max_acceleration_retracting = 1250
