Hint notification fixes and improvements
Hint notification bold (diff color) headline on multiple lines
Hint notification: Documentation link button.
Hints.ini header
hints logo - clippy 
disabled a preffered modes and techs for hints notifications
Empty hints array check. Fix of #6774.

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -1,3 +1,54 @@
+# THIS DOCUMENT CONTAINS DATA FOR HINTS NOTIFICATIONS
+#
+# Each notification is divided by 
+# [hint:*name of notification*]
+#
+# Each notification MUST have text var in format:
+# text = Headline of hint\nBody of hint.
+# Headline is divided by new line (\n) from body.
+# Headline is automaticaly printed as Bold.
+# Body can contain bold marks: <b>text to be bold</b> (currently rendered as diffenert color, not bold due to font limitations)
+# Body can contain hypertext: <a>hypertext text</a>
+# Hypertext must be max one per notification and must be closed by </a>
+#
+# Notification can have documentation link:
+# documentation_link = https://help.prusa3d.com/en/article/name-of-article
+#
+# If notification contains hypertext, it needs to be specified by hypertext_type var.
+# each type needs to be supported with one or more additional vars.
+# These types are possible:
+#
+# Settings highlight (like search feature)
+# hypertext_type = settings
+# hypertext_settings_opt = name_of_settings (hover over settings value and copy last line of hover text)
+# hypertext_settings_type = 1 (1 - 5 according to settings tab - to be channged to name of tabs instead of numbers)
+# hypertext_settings_category = Infill (name of panel - written on left in settings)
+#
+# Plater top toolbar highlight
+# hypertext_type = plater
+# hypertext_plater_item = nameofbutton (internal name of GLToolbar items)
+# 
+# Plater gizmos (left) toolbar highlight
+# hypertext_type = gizmo
+# hypertext_gizmo_item = name (name of svg icon of gizmo in resources without .svg suffix)
+#
+# Open preferences (might add item to highlight)
+# hypertext_type = preferences
+# hypertext_preferences_page = 0 (values 0-2 according to prefernces tab to be opened)
+# 
+# Open gallery (no aditional var)
+# hypertext_type = gallery
+#
+#
+# Each notification can have disabled and preferred modes and techs - divided by ; 
+# preferred_mode = simple
+# disabled_mode = advanced; expert
+# preferred_tech = SLA
+# disabled_tech = FFF; MMU 
+# Algorithm shows hint only if in preffered mode / tech.
+# Algorithm shows hint only if not in disabled mode / tech.
+# if there are both disabled and preferred, only preferred that are not in disabled are valid.
+
 
 [hint:Perspective camera]
 text = Perspective camera\nDid you know that you can use the <b>K</b> key to quickly switch between an orthographic and perspective camera?
@@ -45,12 +96,12 @@ hypertext_plater_item = arrange
 [hint:Reload from disk]
 text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
+documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
 
 [hint:Different layer height for each model]
 text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/per-model-settings_1674
+documentation_link = https://help.prusa3d.com/en/article/per-model-settings_1674
 
 [hint:Solid infill threshold area]
 text = Solid infill threshold area\nDid you know that you can make parts of your model with a small cross-section be filled with solid infill automatically? Set the<a>Solid infill threshold area.</a>(Expert mode only.)
@@ -91,7 +142,7 @@ text = Load config from G-code\nDid you know that you can use File-Import Config
 [hint:Ironing]
 text = Ironing\nDid you know that you can smooth top surfaces of prints using Ironing? The nozzle will run a special second infill phase at the same layer to fill in holes and flatten any lifted plastic. Read more in the<a>documentation.</a> (Requires Advanced or Expert mode.)
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/ironing_177488
+documentation_link = https://help.prusa3d.com/en/article/ironing_177488
 disabled_modes = SLA; simple
 
 [hint:Fuzzy skin]
@@ -105,7 +156,7 @@ disabled_modes = SLA
 [hint:Negative volume]
 text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the<a>documentation.</a>(Requires Advanced or Expert mode.)
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/negative-volume_238503
+documentation_link = https://help.prusa3d.com/en/article/negative-volume_238503
 disabled_modes = SLA; simple
 
 [hint:Paint-on supports]
@@ -123,17 +174,17 @@ disabled_modes = SLA; simple
 [hint:Insert Pause]
 text = Insert Pause\nDid you know that you can schedule the print to pause at a specific layer? Right-click the layer slider in the Preview and select Add pause print (M601). This can be used to insert magnets, weights or nuts into your prints. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-pause-at-layer
+documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-pause-at-layer
 
 [hint:Insert Custom G-code]
 text = Insert Custom G-code\nDid you know that you can insert a custom G-code at a specific layer? Right-click the layer in the Preview and select Add custom G-code. With this function you can, for example, create a temperature tower. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-custom-g-code-at-layer
+documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-custom-g-code-at-layer
 
 [hint:Configuration snapshots]
 text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
+documentation_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
 
 [hint:Minimum wall thickness]
 text = Minimum wall thickness\nDid you know that instead of the number of top and bottom layers, you can define the<a>Minimum shell thickness</a>in millimeters? This feature is especially useful when using the variable layer height function.
@@ -151,7 +202,7 @@ hypertext_preferences_page = 2
 [hint:Adaptive infills]
 text = Adaptive infills\nDid you know that you can use the Adaptive cubic and Support cubic infills to decrease the print time and lower the filament consumption? Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/infill-patterns_177130
+documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
 
 [hint:Fullscreen mode]
 text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
@@ -159,7 +210,7 @@ text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscre
 [hint:Simplify mesh]
 text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the<a>documentation.</a>
 hypertext_type = link
-hypertext_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
+documentation_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
 
 #[hint:]
 #text = 
